Updated styling for the responsive nav.

--- a/styles.css
+++ b/styles.css
@@ -57,17 +57,30 @@ header {
 }
 
 .nav {
-  flex: 1 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .nav-item {
+  display: flex;
+  justify-content: space-between;
   text-align: center;
   border-bottom: 1px dotted #455A64;
   cursor: pointer;
 }
 
-.nav-item:hover {
-  background: #455A64;
+.nav-item.logo {
+  align-items: flex-start;
+}
+
+.nav-items {
+  font-family: 'Lato', sans-serif;
+  cursor: pointer;
+}
+
+.nav-items:hover {
+  /*background: #455A64;*/
   color: #FFF;
 }
 
@@ -81,7 +94,7 @@ i {
   font-family: 'Lato', sans-serif;
 }
 
-span i {
+.nav-link {
   width: 18px;
   height: 18px;
   text-align: center;
@@ -147,6 +160,13 @@ div.image {
 .attachment-title,
 .attachment-count {
   width: 90%;
+}
+
+.share-title {
+  font-size: 30px;
+  margin: 5px 0;
+  font-weight: 700;
+  font-family: 'Shadows Into Light', cursive;
 }
 
 h1.name {
@@ -215,7 +235,6 @@ h3.date {
   width: 65px;
   height: 65px;
   margin: 5px;
-  cursor: pointer;
   opacity: .5;
   border: 2px solid #BDBDBD;
   border-radius: 50%;
@@ -223,8 +242,7 @@ h3.date {
   justify-content: center;
 }
 
-.share-img:hover,
-.view-count-container:hover {
+.share-img:hover {
   opacity: 0.7;
   border: 2px dotted #BDBDBD;
 }
@@ -287,30 +305,22 @@ h3.date {
   background-position: center;
 }
 
-@media screen and (min-width: 640px) {
-  .nav-item {
-    border: none;
-    /*background-color: yellow;*/
+@media screen and (min-width: 500px) {
+  .nav {
+    flex-direction: row-reverse;
   }
-  .logo,
-  .share,
-  .crew,
-  .film {
-    flex: 1 auto;
+  .nav-item.logo {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    align-items: center;
   }
-  .admin {
-    order: -1 flex: 3 0px;
+  .nav-item.navbar {
+    align-items: flex-end;
   }
-  .share {
-    order: 1;
-  }
-  .crew {
-    order: 2;
-  }
-  .film {
-    order: 3;
-  }
-  .logo {
-    order: 4;
+}
+
+@media screen and (min-width: 350px) {
+  .nav-item.navbar {
+    justify-content: flex-start;
   }
 }
